thing/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: service1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  selector:
    matchLabels:
      app: service1
  replicas: 2
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: hashicorp/http-echo
          args:
            - "-text=service1"
          ports:
            - containerPort: 5678
