thing/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: service2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  selector:
    matchLabels:
      app: service2
  replicas: 1
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: hashicorp/http-echo
          args:
            - "-text=service2"
          ports:
            - containerPort: 5678
